docs: add model capabilities guide and update provider documentation with tool_use (#6901)
* docs: add model capabilities guide and update provider documentation

- Add new model-capabilities.mdx deep dive guide
- Update OpenRouter provider documentation
- Update Ollama provider documentation
- Update reference documentation
- Update troubleshooting documentation

* docs: add model-capabilities to navigation menu

- Add model-capabilities.mdx to deep-dives section in docs.json

* docs: add model compatibility matrix to model capabilities guide

- Add comprehensive compatibility matrix for popular models
- Include OpenAI, Anthropic, Google, Mistral, DeepSeek, and Ollama models
- Document feature support for Chat, Apply, Edit, Tool Use, and Image Input
- Add GitHub edit link for community contributions

* docs: refactor troubleshooting content for model capabilities

* docs: improve model capabilities guide formatting and structure

- Remove migration section reference to non-existent page
- Align table headers with left alignment for better readability
- Clean up document structure by removing broken cross-reference

* fix: remove css fix

* docs: update model capabilities and setup documentation

- Enhanced model capabilities documentation with more detailed explanations
- Added model setup information across agent, autocomplete, chat, and edit features
- Improved documentation structure and clarity for better user understanding

* docs: add more context to model setup bdougie/con-3178

* fix: update naming

* fix: response to pr review

* Update docs/customize/deep-dives/model-capabilities.mdx

Co-authored-by: BekahHW <34313413+BekahHW@users.noreply.github.com>

* Update docs/customize/deep-dives/model-capabilities.mdx

Co-authored-by: BekahHW <34313413+BekahHW@users.noreply.github.com>

* Update docs/customize/model-providers/top-level/ollama.mdx

Co-authored-by: BekahHW <34313413+BekahHW@users.noreply.github.com>

* fix: remove note

* docs: clarify model capabil

--- a/docs/customize/model-providers/top-level/ollama.mdx
+++ b/docs/customize/model-providers/top-level/ollama.mdx
@@ -123,3 +123,42 @@ To configure a remote instance of Ollama, add the `"apiBase"` property to your m
     ```
     </Tab>
 </Tabs>
+
+## Model Capabilities
+
+Ollama models usually have their capabilities auto-detected correctly. However, if you're using custom model names or experiencing issues with tools/images not working, you can explicitly set capabilities:
+
+<Tabs>
+    <Tab title="YAML">
+    ```yaml title="config.yaml"
+    models:
+      - name: Custom Vision Model
+        provider: ollama
+        model: my-custom-llava
+        capabilities:
+          - tool_use      # Enable if your model supports function calling
+          - image_input   # Enable for vision models like llava
+    ```
+    </Tab>
+    <Tab title="JSON">
+    ```json title="config.json"
+    {
+      "models": [
+        {
+          "title": "Custom Vision Model",
+          "provider": "ollama",
+          "model": "my-custom-llava",
+          "capabilities": {
+            "tools": true,
+            "uploadImage": true
+          }
+        }
+      ]
+    }
+    ```
+    </Tab>
+</Tabs>
+
+<Note>
+Most standard Ollama models (like llama3.1, mistral, etc.) support tool use by default. Vision models (like llava) also support image input.
+</Note>
