--- a/docs/customize/model-providers/more/openrouter.mdx
+++ b/docs/customize/model-providers/more/openrouter.mdx
@@ -71,3 +71,50 @@ For example, to prevent extra long prompts from being compressed, you can explic
 </Tabs>
 
 Learn more about available settings [here](https://openrouter.ai/docs).
+
+## Model Capabilities
+
+OpenRouter models may require explicit capability configuration because the proxy doesn't always preserve the original model's function calling support. 
+
+<Info>
+  Continue automatically uses system message tools for models that don't support native function calling, so Agent mode should work even without explicit capability configuration. However, you can still override capabilities if needed.
+</Info>
+
+If you're experiencing issues with Agent mode or tools not working, you can add the capabilities field:
+
+<Tabs>
+  <Tab title="YAML">
+  ```yaml title="config.yaml"
+  models:
+    - name: Claude via OpenRouter
+      provider: openrouter
+      model: anthropic/claude-3.5-sonnet
+      apiBase: https://openrouter.ai/api/v1
+      apiKey: <YOUR_OPEN_ROUTER_API_KEY>
+      capabilities:
+        - tool_use      # Enable function calling for Agent mode
+        - image_input   # Enable image upload support
+  ```
+  </Tab>
+  <Tab title="JSON">
+  ```json title="config.json"
+  {
+    "models": [
+      {
+        "title": "Claude via OpenRouter",
+        "provider": "openrouter",
+        "model": "anthropic/claude-3.5-sonnet",
+        "apiBase": "https://openrouter.ai/api/v1",
+        "apiKey": "<YOUR_OPEN_ROUTER_API_KEY>",
+        "capabilities": {
+          "tools": true,
+          "uploadImage": true
+        }
+      }
+    ]
+  }
+  ```
+  </Tab>
+</Tabs>
+
+Note: Not all models support function calling. Check the [OpenRouter models page](https://openrouter.ai/models) for specific model capabilities.
