--- a/docs/guides/cli.mdx
+++ b/docs/guides/cli.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Continue CLI (cn)"
-description: "Context engineer on the command line."
+description: "Context engineering on the command line"
 ---
 
 <Warning>Continue CLI (cn) is currently in Alpha</Warning>
