move context restriction properties to model level autocompleteOptions
- added context restriction properties to model autocompleteOptions schema
- discarded changes to add global tabAutocompleteOptions to config schema
- added experimental parameters to both config-types.
- added YAML alternative note to json reference.
- updated YAML configuration example with per-model options.
- added reference documentation with parameters for autocomplete options.

--- a/docs/customize/deep-dives/autocomplete.mdx
+++ b/docs/customize/deep-dives/autocomplete.mdx
@@ -84,7 +84,7 @@ Then, add the model to your configuration:
 
 Once the model has been downloaded, you should begin to see completions in VS Code.
 
-NOTE: Typically, thinking-type models are not recommended as they generate more slowly and are not suitable for scenarios that require speed. 
+NOTE: Typically, thinking-type models are not recommended as they generate more slowly and are not suitable for scenarios that require speed.
 
 However, if you use any thinking-switchable models, you can configure these models for autocomplete functions by turning off the thinking mode.
 
@@ -92,7 +92,7 @@ For example:
 
 <Tabs>
   <Tab title="YAML">
-  ```yaml title="config.yaml"
+```yaml title="config.yaml"
   models:
     - name: Qwen3 without Thinking for Autocomplete
       provider: ollama
@@ -122,9 +122,32 @@ The following settings can be configured for autocompletion in the IDE extension
 - `Multiline Autocompletions`: Controls multiline completions for autocomplete. Can be set to `always`, `never`, or `auto`. Defaults to `auto`
 - `Disable autocomplete in files`: List of comma-separated glob pattern to disable autocomplete in matching files. E.g., "\_/.md, \*/.txt"
 
-### `config.json` Configuration
+### Autocomplete Configuration
 
-The `config.json` configuration format (deprecated) offers further configuration options through `tabAutocompleteOptions`. See the [JSON Reference](/reference) for more details.
+#### YAML Configuration
+
+The `config.yaml` format offers model-level configuration using the `autocompleteOptions` field. See the [YAML Reference](/reference#models) for more details.
+
+```yaml
+models:
+  - name: Codestral
+    provider: mistral
+    model: codestral-latest
+    roles:
+      - autocomplete
+    autocompleteOptions:
+      disable: false
+      maxPromptTokens: 1024
+      debounceDelay: 250
+      modelTimeout: 150
+      maxSuffixPercentage: 0.2
+      prefixPercentage: 0.3
+      onlyMyCode: true
+```
+
+#### JSON Configuration (Deprecated)
+
+The `config.json` configuration format offers configuration options through `tabAutocompleteOptions`. See the [JSON Reference](/reference/json-reference#tabautocomplete-options) for more details.
 
 ## FAQs
 
