--- a/docs/reference/json-reference.mdx
+++ b/docs/reference/json-reference.mdx
@@ -1,6 +1,14 @@
 ---
-title: "config.json Reference"
+title: "config.json Reference (Deprecated)"
+description: "Legacy configuration reference for config.json - use config.yaml instead"
+noindex: true
 ---
+
+<Warning>
+  **This page documents deprecated functionality.** For creating slash commands and customizing Continue, please use:
+  - [Prompt blocks and prompt files](/customize/deep-dives/slash-commands) for slash commands
+  - [config.yaml](/reference) for configuration
+</Warning>
 
 <Info>
   We recently introduced a new configuration format, `config.yaml`, to replace
