--- a/docs/customize/deep-dives/configuration.mdx
+++ b/docs/customize/deep-dives/configuration.mdx
@@ -61,7 +61,8 @@ Example
 `config.ts` must export a `modifyConfig` function, like:
 
 <Warning>
-  The `slashCommands` array shown below is deprecated. For creating custom slash commands, use [prompt blocks or prompt files](./slash-commands) instead.
+  The `slashCommands` array shown below is deprecated. For creating custom slash
+  commands, use [prompt files](./slash-commands) instead.
 </Warning>
 
 ```ts title="config.ts"
