--- a/docs/customize/deep-dives/slash-commands.mdx
+++ b/docs/customize/deep-dives/slash-commands.mdx
@@ -12,10 +12,10 @@ Slash commands are shortcuts that can be activated by typing '/' in a chat sessi
 Slash commands can be combined with additional instructions, including [context providers](../custom-providers.mdx) or highlighted code.
 
 <Note>
-  **Recommended approach**: Use prompt blocks or prompt files to create slash
-  commands instead of the deprecated `config.json` approach. The methods
-  described below provide better flexibility and are the actively maintained
-  ways to add custom commands.
+  **Recommended approach**: Use prompt files to create slash commands instead of
+  the deprecated `config.json` approach. The methods described below provide
+  better flexibility and are the actively maintained ways to add custom
+  commands.
 </Note>
 
 ## Prompts
