Update sidebar title

--- a/docs/customize/model-providers/top-level/xAI.mdx
+++ b/docs/customize/model-providers/top-level/xAI.mdx
@@ -2,6 +2,7 @@
 title: "How to Configure xAI with Continue"
 slug: ../xai
 description: "Configure xAI's Grok 4 model with Continue for advanced chat capabilities, with easy API key setup from the xAI console"
+sidebarTitle: "xAI"
 ---
 
 <Info>
