--- a/docs/customize/model-providers/top-level/deepseek.mdx
+++ b/docs/customize/model-providers/top-level/deepseek.mdx
@@ -2,6 +2,7 @@
 title: "How to Configure DeepSeek with Continue"
 slug: ../deepseek
 description: "Configure DeepSeek models with Continue, including DeepSeek Chat for general conversations and DeepSeek Coder specifically optimized for code autocomplete and programming tasks"
+sidebarTitle: "DeepSeek"
 ---
 
 <Info>
