--- a/docs/customize/model-providers/top-level/inception.mdx
+++ b/docs/customize/model-providers/top-level/inception.mdx
@@ -2,6 +2,7 @@
 title: "How to Configure Inception with Continue"
 slug: ../inception
 description: "Configure Inception Labs models with Continue, featuring Mercury Coder Small for both chat and autocomplete functions, optimized for programming and code generation tasks"
+sidebarTitle: "Inception"
 ---
 
 <Info>
