--- a/docs/customize/model-providers/top-level/mistral.mdx
+++ b/docs/customize/model-providers/top-level/mistral.mdx
@@ -2,6 +2,7 @@
 title: "How to Configure Mistral with Continue"
 slug: ../mistral
 description: "Configure Mistral AI models with Continue, including Mistral Large for chat, Codestral for code autocomplete, and Mistral Embed for embeddings with separate API key options"
+sidebarTitle: "Mistral"
 ---
 
 <Info>
