--- a/docs/customize/model-providers/top-level/vertexai.mdx
+++ b/docs/customize/model-providers/top-level/vertexai.mdx
@@ -2,6 +2,7 @@
 title: "How to Configure Vertex AI with Continue"
 slug: ../vertexai
 description: "Configure Google Cloud's Vertex AI with Continue to access powerful models like Claude 3.5 Sonnet, Codestral, and text-embedding-004 for chat, autocomplete, and embeddings"
+sidebarTitle: "Vertex AI"
 ---
 
 <Info>
