Optimize or add  headings, titles, and descriptions

--- a/docs/features/agent/plan-mode.mdx
+++ b/docs/features/agent/plan-mode.mdx
@@ -9,14 +9,14 @@ Plan mode is a restricted environment that provides read-only access to your cod
 
 ![Plan mode in action](/images/plan-mode.gif)
 
-### Key features
+### What Are the Key Features of Plan Mode
 
 - **Read-only tools**: Access files, search, and analyze without risk
 - **Safe exploration**: Perfect for understanding unfamiliar codebases
 - **Planning focus**: Develop implementation strategies before execution
 - **MCP support**: Works with all MCP tools alongside built-in read-only tools
 
-### How it works
+### How Plan Mode Works
 
 Plan mode filters the available tools to only include read-only operations. This means you can:
 - Read any file in your project
@@ -30,7 +30,7 @@ But you cannot:
 - Run terminal commands
 - Make any system changes
 
-### Getting started
+### How to Get Started with Plan Mode
 
 Select "Plan" from the mode selector below the chat input, or use `Cmd/Ctrl + .` to cycle through modes.
 
@@ -38,7 +38,7 @@ Select "Plan" from the mode selector below the chat input, or use `Cmd/Ctrl + .`
 
 For detailed information about tools and usage, see the [Agent documentation](/features/agent/how-it-works), which covers both Agent and Plan modes.
 
-### Common workflow
+### What Is the Common Workflow for Plan Mode
 
 1. **Start in Plan mode** to explore and understand
 2. **Develop your approach** with the model's help
