--- a/docs/features/autocomplete/model-setup.mdx
+++ b/docs/features/autocomplete/model-setup.mdx
@@ -1,6 +1,12 @@
+---
+title: "Recommended Models for Autocomplete in Continue"
+description: "Choose the best autocomplete model for Continue, including hosted high-performance options, fast speed/quality tradeoffs, and local privacy-first models."
+sidebarTitle: "Recommended Autocomplete Models"
+---
+
 Setting up the right model for autocomplete is crucial for a smooth coding experience. Here are our top recommendations:
 
-## Recommended Models
+## Recommended Models for Autocomplete in Continue
 
 ### Hosted (Best Performance)
 
