--- a/docs/features/agent/how-it-works.mdx
+++ b/docs/features/agent/how-it-works.mdx
@@ -3,7 +3,7 @@ title: "How Agent Works"
 description: "Agent offers the same functionality as Chat, while also including tools in the request to the model and an interface for handling tool calls and responses."
 ---
 
-## The tool handshake
+## How the Tool Handshake Works
 
 Tools provide a flexible, powerful way for models to interface with the external world. They are provided to the model as a JSON object with a name and an arguments schema. For example, a `read_file` tool with a `filepath` argument will give the model the ability to request the contents of a specific file.
 
@@ -23,11 +23,11 @@ The following handshake describes how Agent uses tools:
   - **Agent mode**: All tools included
 </Info>
 
-## Built-in tools
+## What Built-in Tools Are Available
 
 Continue includes several built-in tools which provide the model access to IDE functionality.
 
-### Plan mode tools (read-only)
+### What Tools Are Available in Plan Mode (Read-Only)
 
 In Plan mode, only these read-only tools are available:
 - **Read file** (`read_file`)
@@ -42,7 +42,7 @@ In Plan mode, only these read-only tools are available:
 - **View subdirectory** (`view_subdirectory`)
 - **Codebase tool** (`codebase_tool`)
 
-### Agent mode tools (all tools)
+### What Tools Are Available in Agent Mode (All Tools)
 
 In Agent mode, all tools are available including the read-only tools above plus:
 
