--- a/docs/features/agent/how-to-customize.mdx
+++ b/docs/features/agent/how-to-customize.mdx
@@ -1,8 +1,8 @@
-## Add Rules Blocks
+## How to Add Rules Blocks
 
 Adding Rules can be done in your assistant locally or in the Hub. You can explore Rules on the Continue Hub and refer to the [Rules deep dive](/customize/deep-dives/rules) for more details.
 
-## Customize System Messages
+## How to Customize System Messages
 
 You can customize the system messages for Chat, Agent, and Plan modes using model-level configuration:
 
@@ -17,11 +17,11 @@ models:
       basePlanSystemMessage: "You are a planning assistant. Create clear, actionable steps."
 ```
 
-## Add MCP Tools
+## How to Add MCP Tools
 
 You can add MCP servers to your assistant to give Agent access to more tools. Explore [MCP Servers on the Hub](https://hub.continue.dev) and consult the [MCP guide](/customize/deep-dives/mcp) for more details.
 
-## Tool Policies
+## How to Configure Tool Policies
 
 You can adjust the Agent's tool usage behavior to three options:
 
