--- a/docs/features/agent/model-setup.mdx
+++ b/docs/features/agent/model-setup.mdx
@@ -1,6 +1,6 @@
 The models you set up for Chat mode will be used with Agent mode if the model supports tool calling. The recommended models and how to set them up can be found [here](/features/chat/model-setup).
 
-## System Message Tools
+## How System Message Tools Work
 
 <Info>
   System message tools are experimental and may change in future releases.
@@ -8,7 +8,7 @@ The models you set up for Chat mode will be used with Agent mode if the model su
 
 Continue implements an innovative approach called **system message tools** that ensures consistent tool functionality across all models, regardless of their native capabilities. This allows Agent mode to work seamlessly with a wider range of models and providers.
 
-### How It Works
+### How System Message Tools Function
 
 Instead of relying solely on native tool calling APIs (which vary between providers), Continue converts tools into XML format and includes them in the system message. The model generates tool calls as structured XML within its response, which Continue then parses and executes. This approach provides:
 
@@ -17,7 +17,7 @@ Instead of relying solely on native tool calling APIs (which vary between provid
 - **Better reliability** - Models that struggle with native tools often perform better with system message tools
 - **Seamless switching** - Change between providers without modifying your workflow
 
-### Recommended Models
+### What Models Are Recommended for Agent Mode
 
 For the best Agent mode experience, we recommend models with strong reasoning and instruction-following capabilities:
 
@@ -32,6 +32,6 @@ While more limited in capabilities, these models can work with system message to
 - Devstral 27B - Good for code-specific tasks
 - Smaller models (7B-13B) - May struggle with complex tool interactions
 
-### Configuration
+### How to Configure Agent Mode
 
 Agent mode automatically determines whether to use native or system message tools based on the model's capabilities. No additional configuration is required - simply select your model and Continue handles the rest.
