Optimize agent docs headings, titles, descriptions

--- a/docs/features/agent/how-it-works.mdx
+++ b/docs/features/agent/how-it-works.mdx
@@ -1,5 +1,5 @@
 ---
-title: "How Agent Works"
+title: "How Agent Mode Works"
 description: "Agent offers the same functionality as Chat, while also including tools in the request to the model and an interface for handling tool calls and responses."
 ---
 
