--- a/docs/features/agent/how-to-customize.mdx
+++ b/docs/features/agent/how-to-customize.mdx
@@ -1,3 +1,9 @@
+---
+title: "How to Customize Agent Mode"
+description: "Learn how to customize Agent Mode in Continue to better fit your workflow and coding style."
+sidebarTitle: "Customize Agent"
+---
+
 ## How to Add Rules Blocks
 
 Adding Rules can be done in your assistant locally or in the Hub. You can explore Rules on the Continue Hub and refer to the [Rules deep dive](/customize/deep-dives/rules) for more details.
