--- a/docs/features/agent/plan-mode.mdx
+++ b/docs/features/agent/plan-mode.mdx
@@ -1,6 +1,7 @@
 ---
-title: "Plan Mode"
-description: "Explore and understand code safely with read-only tools"
+title: "Plan Mode in Continue – Safe, Read-Only Code Exploration"
+sidebarTitle: "Plan Mode"
+description: "Learn how to use Plan Mode in Continue to explore and understand codebases safely with read-only tools, search, and analysis before making changes"
 ---
 
 ## What is Plan mode?
@@ -9,7 +10,7 @@ Plan mode is a restricted environment that provides read-only access to your cod
 
 ![Plan mode in action](/images/plan-mode.gif)
 
-### What Are the Key Features of Plan Mode
+### What Are the Key Features of Plan Mode?
 
 - **Read-only tools**: Access files, search, and analyze without risk
 - **Safe exploration**: Perfect for understanding unfamiliar codebases
@@ -38,7 +39,7 @@ Select "Plan" from the mode selector below the chat input, or use `Cmd/Ctrl + .`
 
 For detailed information about tools and usage, see the [Agent documentation](/features/agent/how-it-works), which covers both Agent and Plan modes.
 
-### What Is the Common Workflow for Plan Mode
+### What Is the Common Workflow for Plan Mode?
 
 1. **Start in Plan mode** to explore and understand
 2. **Develop your approach** with the model's help
