--- a/docs/features/agent/model-setup.mdx
+++ b/docs/features/agent/model-setup.mdx
@@ -1,3 +1,9 @@
+---
+title: "Model Setup for Agent Mode"
+description: "Learn how to set up models for Agent Mode in Continue, including recommended models and configuration options for optimal performance"
+sidebarTitle: "Model Setup"
+---
+
 The models you set up for Chat mode will be used with Agent mode if the model supports tool calling. The recommended models and how to set them up can be found [here](/features/chat/model-setup).
 
 ## How System Message Tools Work
