Optimize titles, descriptions, and headings for Edit

--- a/docs/features/chat/model-setup.mdx
+++ b/docs/features/chat/model-setup.mdx
@@ -3,7 +3,7 @@ The model you use for for Chat mode will be
 - used with Edit mode by default but can be switched
 - always used with Agent mode if the model supports tool calling
 
-## Recommended Models
+## What Models Are Recommended for Chat
 
 Our strong recommendation is to use [Claude Sonnet 4](https://hub.continue.dev/anthropic/claude-4-sonnet) from Anthropic.
 
@@ -14,7 +14,7 @@ Its strong tool calling and reasoning capabilities make it the best model for Ag
 3. Add `ANTHROPIC_API_KEY` as a [User Secret](https://docs.continue.dev/hub/secrets/secret-types#user-secrets) on Continue Hub [here](https://hub.continue.dev/settings/secrets)
 4. Click `Reload config` in the assistant selector in the Continue IDE extension
 
-### Other hosted models
+### What Other Hosted Models Are Available
 
 These models have varying tool calling and reasoning capabilities.
 
@@ -67,7 +67,7 @@ These models have varying tool calling and reasoning capabilities.
 3. Add `TOGETHER_API_KEY` as a [User Secret](https://docs.continue.dev/hub/secrets/secret-types#user-secrets) on Continue Hub [here](https://hub.continue.dev/settings/secrets)
 4. Click `Reload config` in the assistant selector in the Continue IDE extension
 
-### Local models
+### What Local Models Are Available
 
 These models can be run on your computer if you have enough VRAM.
 
@@ -99,6 +99,6 @@ Their limited tool calling and reasoning capabilities will make it challenging t
 
 For more detailed setup instructions, see [here](/getting-started/install#setup-your-first-model).
 
-## Model Compatibility
+## How to Check Model Compatibility
 
 To see which models support specific features like tool use (for Agent mode) and image input, check out our [Model Capabilities guide](/customize/deep-dives/model-capabilities#model-compatibility-matrix).
