--- a/docs/features/chat/quick-start.mdx
+++ b/docs/features/chat/quick-start.mdx
@@ -5,9 +5,9 @@ description: "Get started with Continue's AI chat assistant to solve coding prob
 
 Chat makes it easy to ask for help from an AI without leaving your IDE. Get explanations, generate code, and iterate on solutions conversationally.
 
-## Basic Usage
+## How to Use Chat - Basic Usage
 
-### 1. Start a Conversation
+### 1. How to Start a Conversation
 
 Type your question or request in the chat input and press Enter.
 
@@ -17,7 +17,7 @@ Type your question or request in the chat input and press Enter.
 - "How do I handle errors in this code?"
 - "Generate a test for this component"
 
-### 2. Include Code Context
+### 2. How to Include Code Context
 
 Select code in your editor, then use the keyboard shortcut to include it in your chat:
 
@@ -28,7 +28,7 @@ Press `Cmd/Ctrl + L` to send selected code to chat
 
 Press `Cmd/Ctrl + J` to send selected code to chat
 
-### 3. Use @ for Additional Context
+### 3. How to Use @ for Additional Context
 
 Type `@` to include specific context:
 
@@ -37,7 +37,7 @@ Type `@` to include specific context:
 - `@Files` - Reference specific files
 - `@Terminal` - Include terminal output
 
-## Working with Responses
+## How to Work with Responses
 
 When the AI provides code in its response, you'll see action buttons:
 
@@ -45,13 +45,13 @@ When the AI provides code in its response, you'll see action buttons:
 - **Insert at cursor** - Add code at your cursor position
 - **Copy** - Copy code to clipboard
 
-## Pro Tips
+## What Are the Pro Tips for Chat
 
-### Start Fresh
+### How to Start Fresh
 
 Press `Cmd/Ctrl + L` (VS Code) or `Cmd/Ctrl + J` (JetBrains) in an empty chat to start a new session.
 
-### Be Specific
+### How to Be Specific
 
 Include details about:
 
@@ -59,7 +59,7 @@ Include details about:
 - Any constraints or requirements
 - Your preferred coding style or patterns
 
-### Iterate
+### How to Iterate
 
 If the first response isn't perfect:
 
@@ -67,21 +67,21 @@ If the first response isn't perfect:
 - Request modifications
 - Provide additional context
 
-## Common Use Cases
+## What Are Common Use Cases for Chat
 
-### Code Explanation
+### How to Use Chat for Code Explanation
 
 Select confusing code and ask "What does this code do?"
 
-### Bug Fixing
+### How to Use Chat for Bug Fixing
 
 Include error messages and ask "How do I fix this error?"
 
-### Code Generation
+### How to Use Chat for Code Generation
 
 Describe what you want: "Create a React component that displays a user profile"
 
-### Refactoring
+### How to Use Chat for Refactoring
 
 Select code and ask "How can I make this more efficient?"
 
