--- a/docs/features/edit/model-setup.mdx
+++ b/docs/features/edit/model-setup.mdx
@@ -1,8 +1,14 @@
+---
+title: "How to Set Up Edit Models"
+sidebarTitle: "Set Up Edit Models"
+description: "Learn how to set up and customize models for Edit functionality in Continue."
+---
+
 The model you set up for Chat mode will be used for Edit mode by default.
 
 The recommended models and how to set them up can be found [here](/features/chat/model-setup).
 
-## Apply Model
+## How to Set Up an Apply Model
 
 We also recommend setting up an Apply model for the best Edit experience.
 
@@ -11,6 +17,6 @@ We also recommend setting up an Apply model for the best Edit experience.
 - [Morph v3](https://hub.continue.dev/morphllm/morph-v2)
 - [Relace Instant Apply](https://hub.continue.dev/relace/instant-apply)
 
-## Model Compatibility
+## How to Determine Model Compatibility
 
 For a complete overview of which models support various features, see our [Model Capabilities guide](/customize/deep-dives/model-capabilities#model-compatibility-matrix).
