--- a/docs/features/chat/context-selection.mdx
+++ b/docs/features/chat/context-selection.mdx
@@ -1,3 +1,9 @@
+---
+title: "Chat Mode Context Selection"
+sidebarTitle: "Context Selection"
+description: "Learn how Continue selects relevant context for your chat requests, including text input, highlighted code, active files
+---
+
 ## How to Use Text Input
 
 Typing a question or instructions into the input box is the only required context.
