--- a/docs/features/chat/quick-start.mdx
+++ b/docs/features/chat/quick-start.mdx
@@ -1,5 +1,6 @@
 ---
-title: "Quick Start"
+title: "Chat Mode Quick Start"
+sidebarTitle: "Quick Start"
 description: "Get started with Continue's AI chat assistant to solve coding problems directly in your IDE, with features for code context sharing, codebase search, and applying generated solutions to your files"
 ---
 
@@ -7,7 +8,7 @@ Chat makes it easy to ask for help from an AI without leaving your IDE. Get expl
 
 ## How to Use Chat - Basic Usage
 
-### 1. How to Start a Conversation
+### How to Start a Conversation
 
 Type your question or request in the chat input and press Enter.
 
@@ -17,7 +18,7 @@ Type your question or request in the chat input and press Enter.
 - "How do I handle errors in this code?"
 - "Generate a test for this component"
 
-### 2. How to Include Code Context
+### How to Include Code Context
 
 Select code in your editor, then use the keyboard shortcut to include it in your chat:
 
@@ -28,7 +29,7 @@ Press `Cmd/Ctrl + L` to send selected code to chat
 
 Press `Cmd/Ctrl + J` to send selected code to chat
 
-### 3. How to Use @ for Additional Context
+### How to Use @ for Additional Context
 
 Type `@` to include specific context:
 
@@ -47,11 +48,11 @@ When the AI provides code in its response, you'll see action buttons:
 
 ## What Are the Pro Tips for Chat
 
-### How to Start Fresh
+### Start Fresh
 
 Press `Cmd/Ctrl + L` (VS Code) or `Cmd/Ctrl + J` (JetBrains) in an empty chat to start a new session.
 
-### How to Be Specific
+### Be Specific
 
 Include details about:
 
@@ -59,7 +60,7 @@ Include details about:
 - Any constraints or requirements
 - Your preferred coding style or patterns
 
-### How to Iterate
+### Iterate
 
 If the first response isn't perfect:
 
@@ -69,19 +70,19 @@ If the first response isn't perfect:
 
 ## What Are Common Use Cases for Chat
 
-### How to Use Chat for Code Explanation
+### Code Explanation
 
 Select confusing code and ask "What does this code do?"
 
-### How to Use Chat for Bug Fixing
+### Bug Fixing
 
 Include error messages and ask "How do I fix this error?"
 
-### How to Use Chat for Code Generation
+### Code Generation
 
 Describe what you want: "Create a React component that displays a user profile"
 
-### How to Use Chat for Refactoring
+### Refactoring
 
 Select code and ask "How can I make this more efficient?"
 
