Improve Headings, titles, descriptions

--- a/docs/guides/overview.mdx
+++ b/docs/guides/overview.mdx
@@ -1,9 +1,9 @@
 ---
-title: "Overview"
-description: "Explore Continue's practical guides for model setup, local development, offline usage, and advanced customization including Ollama integration, self-hosting, and custom context providers"
+title: "How to Use Continue Guides"
+description: "Comprehensive collection of practical guides for Continue including model setup, local development with Ollama, offline usage, self-hosting, custom context providers, and advanced customization tutorials"
 ---
 
-## Model & Setup Guides
+## What Model & Setup Guides Are Available
 
 - [Using Ollama with Continue](/guides/ollama-guide) - Local AI development with Ollama
 - [Setting up Codestral](/guides/set-up-codestral) - Configure Mistral's Codestral model
@@ -11,11 +11,11 @@ description: "Explore Continue's practical guides for model setup, local develop
 - [Running Continue Without Internet](/guides/running-continue-without-internet) - Offline development setup
 - [Llama 3.1 Setup](/guides/llama3.1) - Getting started with Llama 3.1
 
-## Advanced Tutorials
+## What Advanced Tutorials Are Available
 
 - [Build Your Own Context Provider](/guides/build-your-own-context-provider) - Create custom context providers
 - [Custom Code RAG](/guides/custom-code-rag) - Implement custom retrieval-augmented generation
 
-## Contributing
+## How to Contribute to Guides
 
 Have a guide idea or found an issue? We welcome contributions! Check our [GitHub repository](https://github.com/continuedev/continue) to get involved.
