--- a/docs/guides/plan-mode-guide.mdx
+++ b/docs/guides/plan-mode-guide.mdx
@@ -1,6 +1,6 @@
 ---
-title: "Using Plan Mode with Continue"
-description: "Plan Mode gives you a safe, read-only environment to explore your codebase, map out solutions, and collaborate with AI before making any changes. Think of it as your sandbox for understanding and strategy."
+title: "How to Use Plan Mode with Continue"
+description: "Learn how to use Plan Mode for safe codebase exploration, solution mapping, and AI collaboration with read-only tools before making changes. Master the research-first approach for better architectural decisions"
 ---
 
 Plan Mode prevents unintentional file modifications, letting you think through solutions and build confidence before committing to action. The core principle is understand before you change, giving you a research-first approach that prevents costly mistakes and creates better architectural decisions.
@@ -33,7 +33,7 @@ Plan Mode prevents unintentional file modifications, letting you think through s
 </Columns>
   </Accordion>
 
-## Use Cases
+## What Are the Use Cases for Plan Mode
 
 Plan Mode excels in four key scenarios where understanding before acting prevents expensive mistakes:
 
@@ -65,14 +65,14 @@ Plan Mode excels in four key scenarios where understanding before acting prevent
   </Card>
 </Columns>
 
-## Best Practices
+## What Are the Best Practices for Plan Mode
 
-### For Faster Planning
+### How to Plan Faster
 
 1. **Scope your requests**: `Focus analysis on the user authentication module only, ignore the admin features`
 2. **Use targeted context**: `Analyze @Files and its direct imports for security issues`
 
-### For Higher Quality Plans
+### How to Create Higher Quality Plans
 
 1. **Provide business context**: `This feature needs to handle Black Friday traffic (10x normal load). Plan accordingly.`
 2. **Share technical constraints**: `We're on AWS with strict security requirements. Plan a file upload system that meets SOC2 compliance.`
@@ -85,7 +85,7 @@ You can switch to `Plan` in the mode selector below the chat input box.
 
 ![How to select plan mode](../images/plan-mode-selector.png)
 
-## Available Tools in Plan Mode
+## What Tools Are Available in Plan Mode
 
 | Tool                              | Available | Description                                          |
 | :-------------------------------- | :-------- | :--------------------------------------------------- |
@@ -104,7 +104,7 @@ You can switch to `Plan` in the mode selector below the chat input box.
 | **Git commits/pushes**            | ❌        | Making changes to version control                    |
 | **Database modifications**        | ❌        | Altering database data or structure                  |
 
-## Context Integration in Plan Mode
+## How Context Integration Works in Plan Mode
 
 Context is the foundation of effective planning. Without proper context, AI models fall back on generic patterns, leading to plans that don't fit your specific system. Continue's [context system](/features/chat/context-selection) transforms broad suggestions into actionable strategies:
 
@@ -142,9 +142,9 @@ Context is the foundation of effective planning. Without proper context, AI mode
 </AccordionGroup>
 </Accordion>
 
-## Prompt Library
+## What Prompts Are Available in the Prompt Library
 
-### Codebase Exploration
+### How to Use Prompts for Codebase Exploration
 
 <AccordionGroup>
   <Accordion title="Understanding Systems">
@@ -172,7 +172,7 @@ Context is the foundation of effective planning. Without proper context, AI mode
   </Accordion>
 </AccordionGroup>
 
-### Implementation Planning
+### How to Use Prompts for Implementation Planning
 
 <AccordionGroup>
   <Accordion title="Migrations & Upgrades">
@@ -200,7 +200,7 @@ Context is the foundation of effective planning. Without proper context, AI mode
   </Accordion>
 </AccordionGroup>
 
-### Issue Investigation
+### How to Use Prompts for Issue Investigation
 
 <AccordionGroup>
   <Accordion title="Performance Problems">
@@ -228,7 +228,7 @@ Context is the foundation of effective planning. Without proper context, AI mode
   </Accordion>
 </AccordionGroup>
 
-### Architecture Analysis
+### How to Use Prompts for Architecture Analysis
 
 <AccordionGroup>
   <Accordion title="Scalability & Performance">
@@ -256,7 +256,7 @@ Context is the foundation of effective planning. Without proper context, AI mode
   </Accordion>
 </AccordionGroup>
 
-## From Plan to Execution
+## How to Transition From Plan to Execution
 
 ### When to Transition to Agent Mode
 
