Optimize Blocks section for headings, title, descriptiosn

--- a/docs/guides/running-continue-without-internet.mdx
+++ b/docs/guides/running-continue-without-internet.mdx
@@ -1,6 +1,6 @@
 ---
-title: "Running Continue without Internet"
-description: "Continue can be run even on an air-gapped computer if you use a local model. Only a few adjustments are required for this to work."
+title: "How to Run Continue Without Internet"
+description: "Learn how to set up Continue for air-gapped or offline environments using local models, including steps to disable telemetry and configure local model providers"
 ---
 
 1. Download the latest .vsix file from the [Open VSX Registry](https://open-vsx.org/extension/Continue/continue) and [install it to VS Code](https://code.visualstudio.com/docs/editor/extension-marketplace#_install-from-a-vsix).
