--- a/docs/hub/blocks/bundles.mdx
+++ b/docs/hub/blocks/bundles.mdx
@@ -3,9 +3,9 @@ title: "Bundles"
 description: "Bundles are collections of blocks that are commonly used together. You can use them to add multiple building blocks to your custom AI code assistants at once. They are only a concept on , so they are not represented in ."
 ---
 
-## Use a bundle
+## How to Use a Bundle
 
-Once you know which bundle you want to use, you’ll need to
+Once you know which bundle you want to use, you’ll need to:
 
 1. Make sure the correct assistant is in the sidebar
 2. Click “Add all blocks". This adds the individual blocks to your assistant.
@@ -14,7 +14,7 @@ Once you know which bundle you want to use, you’ll need to
 
 After this, you can then go to your IDE extension using the "Open VS Code" or "Open Jetbrains" buttons and begin using the new blocks.
 
-## Create a bundle
+## How to Create a Bundle
 
 To create a bundle, click “New bundle” in the header.
 
@@ -28,6 +28,6 @@ Then, search blocks using the "Search blocks" input and add them to your bundle.
 
 Once you have added all the blocks you want in your bundle, click "Create Bundle" to save it and make it available for use.
 
-## Remix a bundle
+## How to Remix a Bundle
 
 It is not currently possible to remix a bundle.
