--- a/docs/hub/blocks/intro.mdx
+++ b/docs/hub/blocks/intro.mdx
@@ -1,6 +1,6 @@
 ---
-title: "Introduction"
-description: "Blocks are the components you use to build a custom AI code assistant. These include , , , , , , and ."
+title: "Introduction to Continue Blocks"
+description: "Blocks are the components you use to build a custom AI code assistant. These include models, prompts, tools, context, and more."
 ---
 
 Blocks follow the [`config.yaml`](/reference) format. When combined with other blocks into a complete `config.yaml`, they form a custom AI code assistant.
