Optimize Guides, headings, descriptions, titles

--- a/docs/guides/plan-mode-guide.mdx
+++ b/docs/guides/plan-mode-guide.mdx
@@ -1,6 +1,6 @@
 ---
-title: "How to Use Plan Mode with Continue"
-description: "Learn how to use Plan Mode for safe codebase exploration, solution mapping, and AI collaboration with read-only tools before making changes. Master the research-first approach for better architectural decisions"
+title: "Using Plan Mode with Continue"
+description: "Plan Mode gives you a safe, read-only environment to explore your codebase, map out solutions, and collaborate with AI before making any changes. Think of it as your sandbox for understanding and strategy."
 ---
 
 Plan Mode prevents unintentional file modifications, letting you think through solutions and build confidence before committing to action. The core principle is understand before you change, giving you a research-first approach that prevents costly mistakes and creates better architectural decisions.
@@ -65,7 +65,7 @@ Plan Mode excels in four key scenarios where understanding before acting prevent
   </Card>
 </Columns>
 
-## What Are the Best Practices for Plan Mode
+## What Are the Best Practices for Plan Mode?
 
 ### How to Plan Faster
 
@@ -85,7 +85,7 @@ You can switch to `Plan` in the mode selector below the chat input box.
 
 ![How to select plan mode](../images/plan-mode-selector.png)
 
-## What Tools Are Available in Plan Mode
+## What Tools Are Available in Plan Mode?
 
 | Tool                              | Available | Description                                          |
 | :-------------------------------- | :-------- | :--------------------------------------------------- |
@@ -142,9 +142,9 @@ Context is the foundation of effective planning. Without proper context, AI mode
 </AccordionGroup>
 </Accordion>
 
-## What Prompts Are Available in the Prompt Library
+## Prompt Library
 
-### How to Use Prompts for Codebase Exploration
+### Codebase Exploration
 
 <AccordionGroup>
   <Accordion title="Understanding Systems">
@@ -172,7 +172,7 @@ Context is the foundation of effective planning. Without proper context, AI mode
   </Accordion>
 </AccordionGroup>
 
-### How to Use Prompts for Implementation Planning
+### Implementation Planning
 
 <AccordionGroup>
   <Accordion title="Migrations & Upgrades">
@@ -200,7 +200,7 @@ Context is the foundation of effective planning. Without proper context, AI mode
   </Accordion>
 </AccordionGroup>
 
-### How to Use Prompts for Issue Investigation
+### Issue Investigation
 
 <AccordionGroup>
   <Accordion title="Performance Problems">
@@ -228,7 +228,7 @@ Context is the foundation of effective planning. Without proper context, AI mode
   </Accordion>
 </AccordionGroup>
 
-### How to Use Prompts for Architecture Analysis
+### Architecture Analysis
 
 <AccordionGroup>
   <Accordion title="Scalability & Performance">
