--- a/docs/guides/understanding-assistants.mdx
+++ b/docs/guides/understanding-assistants.mdx
@@ -5,7 +5,8 @@ description: "Learn how to choose between cloud-managed Hub assistants and local
 
 Every developer has unique needs when it comes to AI assistance. Some prefer the convenience of cloud-managed configurations, while others need the control and privacy of local setups. Continue offers both paths, and this guide will help you choose the right one for your workflow.
 
-## What Are the Two Paths to AI Assistance
+## What Are the Two Paths to AI Assistance?
+Continue provides two distinct ways to configure your AI assistant:
 
 Think of Continue's configuration options like choosing between a managed service and self-hosting. Both get you to the same destination—powerful AI assistance in your IDE—but the journey and control level differ significantly.
 
@@ -48,11 +49,11 @@ Pro tip: Hub Assistants are perfect for teams. Create a custom assistant with yo
 
 ### How to Manage Hub Assistants
 
-Configuration, secret management, sharing, and analytics all happen through your web dashboard at [hub.continue.dev](https://hub.continue.dev).
+All Hub Assistant management happens through [the Hub](https://hub.continue.dev). For detailed customization, see our guide on [Editing an Assistant](/hub/assistants/edit-an-assistant).
 
 ## What Are Local Assistants: The Power User's Choice
 
-Local Assistants offer maximum control, running entirely through configuration files on your machine. This approach gives you granular control over every aspect of your AI assistant's behavior.
+Local Assistants put you in the driver's seat. Using a `config.yaml` file, you have complete control over every aspect of your AI assistant's behavior, with all configuration stored directly on your machine.
 
 ### Why Should You Choose Local Assistants?
 
@@ -87,9 +88,9 @@ For the complete configuration reference, see our [config.yaml documentation](/r
 
 ## How to Make the Right Choice
 
-The decision between Hub and Local assistants depends on your specific needs, team structure, and workflow preferences.
+The decision between Hub and Local assistants often comes down to your specific needs and constraints. Here's a framework to help you decide:
 
-### When to Choose Hub Assistants:
+### Choose Hub Assistants When You:
 
 **Value Convenience Over Control**
 - Want to start coding with AI assistance in under 60 seconds
@@ -107,7 +108,7 @@ The decision between Hub and Local assistants depends on your specific needs, te
 - Want to experiment with different models and configurations
 - Prefer guided setup experiences
 
-### When to Choose Local Assistants:
+### Choose Local Assistants When You:
 
 **Require Maximum Control**
 - Need to version control your exact configuration
